# embedded-resources

./: .clang-format  .gitattributes  .gitignore  .gitmodules  LICENSE  Makefile  README.md  meson.build  meson_options.txt
docs/: CI.jenkinsfile  CODE_OF_CONDUCT_template.md  CONTRIBUTING_template.md  ISSUE_TEMPLATE.md  ISSUE_TEMPLATE_example.md  Jenkinsfile  PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE_CCC.md  PULL_REQUEST_TEMPLATE_example.md  README_template.md  container_flowchart.dot
examples/: meson.build
examples/c/: Makefile  circular_buffer.c  circular_buffer_test.c  interrupt_latency.c  linked_list.h  malloc_aligned.c  malloc_freelist.c  malloc_freelist.h  malloc_test.c  malloc_threadx.c  memory.h  meson.build  premake5.lua  refactoring_global_data.c
examples/c/circular_buffer/: circular_buffer.c  circular_buffer.h  circular_buffer_no_modulo.c  circular_buffer_no_modulo_threadsafe.c
examples/c/circular_buffer_tests/: circular_buffer_tests.c  circular_buffer_tests.h
examples/c/fixed_point/: fixed_point_tests.c  fixed_point_tests.h  meson.build  simple_fixed_point.c  simple_fixed_point.h
examples/c/malloc/: malloc_freelist.c  malloc_freelist.h  malloc_test.c  meson.build
examples/cpp/: Makefile  array.cpp  assembly_source_location.cpp  bounce.cpp  c_sbrm.cpp  callbacks.cpp  circular_buffer.cpp  dispatch.cpp  dispatch_freertos.cpp  dispatch_threadx.cpp  dispatch_threadx_stdmutex.cpp  meson.build  premake5.lua  shared_ptr.cpp  smart_ptr_aligned.cpp  string.cpp  variant_message.cpp  vector.cpp
examples/cpp/active_object/: active_object.hpp
examples/cpp/circular_buffer/: circular_buffer.hpp
examples/cpp/driver_abstraction/: meson.build
examples/cpp/driver_abstraction/core/driver/: i2c.hpp  time_of_flight.hpp
examples/cpp/driver_abstraction/core/processor/: interrupt_manager.hpp
examples/cpp/driver_abstraction/drivers/aardvark/: base.cpp  base.hpp  i2c.cpp  i2c.hpp  meson.build
examples/cpp/driver_abstraction/drivers/nrf52/: meson.build  nordic_nvic.hpp  nrf52_i2c_master.hpp  nvic.cpp  nvic.hpp  processor_includes.hpp
examples/cpp/driver_abstraction/drivers/nrf52/helpers/: gpio_helper.cpp  gpio_helper.hpp  twim_helper.cpp  twim_helper.hpp  twim_helper_.hpp
examples/cpp/driver_abstraction/drivers/nrf52/mdk/: nrf.h  nrf52840.h  nrf52840_bitfields.h  nrf52840_peripherals.h  nrf52_to_nrf52840.h  system_nrf52840.c  system_nrf52840.h
examples/cpp/driver_abstraction/drivers/st/: meson.build
examples/cpp/driver_abstraction/drivers/st/vl53l1x/: meson.build  vl53l1x.cpp  vl53l1x.hpp  vl53l1x_registers.h
examples/cpp/endian/: endian.hpp  endian_tests.cpp  meson.build
examples/cpp/inplace_function/: inplace_function.hpp
examples/cpp/volatile/: volatile.hpp
examples/libc/: Makefile  ctype.h  endian.h  features.h  limits.h  linked_list.h  malloc_aligned.c  malloc_freelist.c  malloc_freelist.h  memory.c  memory.h  meson.build  premake5.lua  stdbool.h  stddef.h  stdint.h  stdlib.h  string.h  strings.h
examples/libc/ctype/: alpha.h  isalnum.c  isalpha.c  isascii.c  isblank.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  nonspacing.h  punct.h  toascii.c  tolower.c  toupper.c
examples/libc/stdlib/: abs.c  atof.c  atoi.c  atol.c  atoll.c  bsearch.c  calloc.c  div.c  heapsort.c  heapsort_r.c  imaxabs.c  imaxdiv.c  labs.c  ldiv.c  llabs.c  lldiv.c  qsort.c  rand.c  realloc.c  strtod.c  strtof.c  strtol.c  strtoll.c  strtoull.c
examples/libc/string/: memcmp.c  memcpy.c  memmem.c  memmove.c  memrchr.c  memset.c  strcat.c  strchr.c  strchrnul.c  strcmp.c  strcpy.c  strdup.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strndup.c  strnlen.c  strnstr.c  strrchr.c  strstr.c  strtok.c
examples/libc/support/: fls.c  flsl.c  flsll.c
examples/libc/x86_64/: _endian.h  _limits.h
examples/libc/x86_64/_types/: _int16_t.h  _int32_t.h  _int64_t.h  _int8_t.h  _intmax_t.h  _intptr_t.h  _ptrdiff_t.h  _size_t.h  _uint16_t.h  _uint32_t.h  _uint64_t.h  _uint8_t.h  _uintmax_t.h  _uintptr_t.h
examples/libcpp/: Makefile  __external_threading  __external_threading_freertos  __external_threading_freertos_constexpr  __external_threading_threadx  __mutex_base  main.cpp  meson.build  mutex  mutex.cpp  new.cpp  premake5.lua  typeinfo.cpp
examples/rtos/: meson.build  tx_api.h
examples/rtos/threadx/: tx_port.h  tx_thread.h
interview/: Makefile  bad.c  meson.build  offset_of.c  premake5.lua  stack_dir.c
manufacturing/: MAC_Allocation_Tracker.xlsx
subprojects/: catch2.wrap  etl.wrap  microsoft-gsl.wrap
test/: main.c  main_circular_buffer_no_modulo_threadsafe.c  meson.build
tools/: CI.jenkinsfile  Jenkinsfile
